2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Backend.Mdb.mdp, DebuggerController.cs, Makefile:
	  Enable unix channel support.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs: Implement GetThreads and
	  GetProcesses.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs, IDebuggerServer.cs,
	  DebuggerController.cs: Implemented detach.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs, IDebuggerServer.cs,
	  DebuggerController.cs, MonoDebuggerSessionFactory.cs: Implemented
	  support for attach to process, disassemble.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerController.cs: Added a timeout in the Exit method.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* mono.debugging.backend.mdb.pc.in: Added missing file.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs,
	  Mono.Debugging.Backend.Mdb.mdp, IDebuggerServer.cs,
	  DebuggerController.cs, Makefile: Track api changes. Properly
	  redirect debugger output. Implemented support for adding
	  breakpoints while the target process is running, it seems to kinda
	  work.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Backend.Mdb.mdp: Updated project.

2008-05-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Backend.Mdb.mdp: Implemented query of variable and
	  field data.

2008-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Manifest.addin.xml, IDebuggerController.cs,
	  MonoDebuggerSession.cs, ChangeLog, Mono.Debugging.Backend.Mdb.mdp,
	  Mono.Debugging.Backend.Mdb, DebuggerController.cs,
	  MonoDebuggerSessionFactory.cs, Makefile: Initial import.

2008-04-28  Ankit Jain  <jankit@novell.com>

	* Initial import.